# quirky

./: Cargo.toml  LICENSE.md  README.md  theme.toml
.cargo/: config.toml
crates/binaries/quirky_bevy/: Cargo.toml
crates/binaries/quirky_bevy/src/: main.rs
crates/binaries/test1/: Cargo.toml
crates/binaries/test1/examples/: anchored_buttons.rs  thousands.rs
crates/binaries/test1/src/: main.rs  quad.wgsl
crates/lib/quirky/: Cargo.toml
crates/lib/quirky-macros/: Cargo.toml
crates/lib/quirky-macros/src/: builder.rs  lib.rs  props.rs  widget_struct.rs
crates/lib/quirky-utils/: Cargo.toml
crates/lib/quirky-utils/src/: futures_map_poll.rs  lib.rs
crates/lib/quirky-webgpu/: Cargo.toml
crates/lib/quirky-webgpu/src/primitives/shaders/: quad.wgsl
crates/lib/quirky-widgets/: Cargo.toml
crates/lib/quirky-widgets/src/: lib.rs
crates/lib/quirky-widgets/src/components/: text_input.rs
crates/lib/quirky-widgets/src/layouts/: anchored_container.rs  box_layout.rs  mod.rs
crates/lib/quirky-widgets/src/primitives/: border_box.rs  button_primitive.rs  image.rs  mod.rs  quad.rs  text.rs  vertex.rs
crates/lib/quirky-widgets/src/primitives/shaders/: border_box.wgsl  button.wgsl
crates/lib/quirky-widgets/src/resources/: font_resource.rs  mod.rs
crates/lib/quirky-widgets/src/theming/: button_theme.rs  input_theme.rs  mod.rs
crates/lib/quirky-widgets/src/widgets/: box_layout.rs  button.rs  drawable_image.rs  label.rs  layout_item.rs  mod.rs  run_widget_with_children.rs  slab.rs  stack.rs  text_input.rs  text_layout.rs
crates/lib/quirky-winit/: Cargo.toml
crates/lib/quirky-winit/src/: lib.rs
crates/lib/quirky/src/: drawable_primitive.rs  drawable_tree_watch.rs  drawables.rs  lib.rs  primitives.rs  quirky_app_context.rs  render_contexts.rs  ui_camera.rs  view_tree.rs  widget.rs
crates/lib/quirky/src/primitives/: image.rs  mod.rs  quad.rs  text.rs  vertex.rs
crates/lib/quirky/src/primitives/shaders/: textured_quad.wgsl
crates/lib/quirky/src/styling/: mod.rs
crates/lib/quirky/src/widgets/: box_layout.rs  drawable_image.rs  event_subscribe.rs  events.rs  layout_helper.rs  layout_item.rs  mod.rs  run_widget.rs  run_widget_with_children.rs  slab.rs  text_layout.rs
