[package]
name = "test1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
async-recursion.workspace = true
quirky = { path = "../../lib/quirky" }
bytemuck.workspace = true
glam.workspace = true
glyphon.workspace = true
futures.workspace = true
futures-signals.workspace = true
quirky-winit = { path = "../../lib/quirky-winit" }
lipsum = "0.9.0"
tokio.workspace = true
winit.workspace = true
wgpu.workspace = true
