[package]
name = "test1"
version = "0.1.0"
edition = "2021"

[[example]]
name = "thousands"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
quirky = { path = "../../lib/quirky" }
quirky-widgets = { path = "../../lib/quirky-widgets" }
bytemuck.workspace = true
glam.workspace = true
glyphon.workspace = true
futures.workspace = true
futures-signals.workspace = true
inotify = "0.10.2"
quirky-winit = { path = "../../lib/quirky-winit" }
lipsum = "0.9.0"
tokio.workspace = true
toml = "0.8.2"
winit.workspace = true
wgpu.workspace = true
rand = "0.8.5"
