[package]
name = "quirky-winit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
futures-signals.workspace = true
glam.workspace = true
glyphon.workspace = true
quirky = { path = "../quirky" }
uuid.workspace = true
winit.workspace = true
wgpu.workspace = true