[package]
name = "quirky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
async-std = "1.12.0"
async-recursion.workspace = true
bytemuck.workspace = true
futures.workspace = true
futures-signals.workspace = true
futures-signals-utils.workspace = true
once_cell = "1.18.0"
glam.workspace = true
wgpu.workspace = true
wgpu_macros.workspace = true

typed-builder = "0.15.1"

[dev-dependencies]
tokio.workspace = true
wgpu-test = { git = "https://github.com/gfx-rs/wgpu.git", tag = "v0.17.0" }