[package]
name = "quirky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
async-std.workspace = true
bytemuck.workspace = true
futures.workspace = true
futures-signals.workspace = true
glam.workspace = true
quirky-utils = { path = "../quirky-utils" }
uuid.workspace = true
wgpu.workspace = true

[dev-dependencies]
tokio.workspace = true
wgpu-test = { git = "https://github.com/gfx-rs/wgpu.git", tag = "v0.17.0" }